--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .page {
   min-width: 1100px;
   /* we don't know how to make mobile versions of websites yet, */
@@ -10,10 +15,221 @@
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  border: 1px solid red;
   /* parameters for the header section */
+}
+
+.logo {
+  position: absolute;
+  width: 154px;
+  height: 31px;
+  z-index: 1;
+}
+
+.logo_place_header {
+  top: 30px;
+  left: 64px;
+  border: 1px solid red;
+}
+
+.header__title {
+  z-index: 1;
+  width: 730px;
+  margin-left: 64px;
+  font-size: 102px;
+  font-weight: bold;
+  border: 1px solid red;
+}
+
+.header__subtitle {
+  position: absolute;
+  z-index: 1;
+  width: 368px;
+  bottom: 30px;
+  left: 64px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  border: 1px solid red;
+}
+
+.header__link {
+  color: #2F80ED;
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  position: absolute;
+  width: 756px;
+  height: 608px;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  border: 1px solid red;
+}
+
+.header__square {
+  position: absolute;
+  z-index: -1;
+  right: 0;
+  top: 64px;
+  width: 568px;
+  height: 568px;
+  background: #2F80ED;
+  border: 1px solid red;
+}
+
+.description {
+  display: flex;
+  justify-content: space-between;
+  padding: 100px 0;
+  border: 1px solid red;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+  border: 1px solid red;
+}
+
+.two-columns__brief {
+  width: 175px;
+  margin: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2F80ED;
+  border: 1px solid red;
+}
+
+.two-columns__main-text {
+  display: flex;
+  width: 80%;
+  min-width: 784px;
+  flex-direction: column;
+  gap: 30px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  border: 1px solid red;
+}
+
+.span-acent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.digits {
+  padding: 0 0 100px;
+  border: 1px solid red;
+}
+
+.section-title {
+  justify-content: center;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  margin: 0 auto;
+  text-align: center;
+  border: 1px solid red;
+}
+
+.section-subtitle {
+  justify-content: center;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 auto;
+  text-align: center;
+  border: 1px solid red;
+}
+
+.table {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+  margin: auto;
+  border: 1px solid red;
+}
+
+.table__cell {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  border: 1px solid red;
+}
+
+.table__heading {
+  line-height: 1.5;
+  font-size: 24px;
+  font-weight: bold;
+  border: 1px solid red;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  border: 1px solid red;
+}
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background: #F2F2F2;
+  height: 790px;
+  border: 1px solid red;
+}
+
+.feynman__title {
+  margin: 100px auto 70px;
+  text-align: center;
+  z-index: 1;
+  width: 750px;
+  line-height: 1.5;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  z-index: 1;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #2F80ED;
+}
+
+.feynman__image {
+  position: absolute;
+  width: 867px;
+  height: 637px;
+  bottom: 0;
+  left: 0;
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
@@ -23,9 +239,55 @@
 }
 
 /* including elements with key-value modifiers */
+.kaufman {
+  position: relative;
+  background-color: #1F1F1F;
+  padding: 90px 0;
+  overflow: hidden;
+}
+
+.title__theme_dark {
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #FFFF;
+  z-index: 1;
+}
+
+.subtitle_theme_dark {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  color: #FFFF;
+  z-index: 1;
+}
+
+.table__heading_theme_dark {
+  line-height: 1.5;
+  font-size: 24px;
+  font-weight: bold;
+  color: #FFFF;
+}
+
+.table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #FFFF;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  gap: 20px;
+  z-index: 1;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  right: -124px;
+  top: 0;
 }
