--- a/blocks/khan/__book/-pic/khan__book-pic.css
+++ b/blocks/khan/__book/-pic/khan__book-pic.css
@@ -1,6 +1,6 @@
 .khan__book-pic{
-    background-image: url(../images/);
     width: 620px;
-    height: 608px;
-    background-size: cover;
+    height: 550px;
+    object-fit: cover;
+    object-position: 0px 0px;
   }
