--- a/blocks/techniques/cards/__image/cards__image.css
+++ b/blocks/techniques/cards/__image/cards__image.css
@@ -1,6 +1,9 @@
 .cards__image {
     width: 160px;
     height: 160px;
-    margin: 0px 40px 43px 40px;
+    margin: 60px 40px 43px;
     border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+    display: block;
   }
