--- a/blocks/table/_theme/table_theme_dark.css
+++ b/blocks/table/_theme/table_theme_dark.css
@@ -1,9 +1,9 @@
-.table {
+.table_theme_dark {
     list-style: none;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     width: 1100px;
-    row-gap: 60px;
-    margin-top: 60px;
+    row-gap: 80px;
+    margin-top: 80px;
 }
