--- a/pages/index.css
+++ b/pages/index.css
@@ -58,6 +58,7 @@
 @import url(../blocks/khan/__title/khan__title.css);
 
 @import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/table/_theme/table_theme_dark.css);
 @import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
 @import url(../blocks/table/__heading/_theme/table__heading_theme_dark.css);
 @import url(../blocks/table/__text/_theme/table__text_theme_dark.css);
